--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agency",
   "version": "1.0.0",
-  "description": "My Node.js backend project hosted on Railway",
+  "description": "Agency project for backend hosted on Railway",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.1"
   },
   "engines": {
     "node": ">=14.0.0"
