--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
+  },
+  "engines": {
+    "node": "16.x"  // Hier stel je de Node.js-versie in op 16.x
   }
 }
-
